--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,7 @@
 <html>
-
-Welcome
-
+<body>
+  [Welcome]
+  <br>
+  <img src="https://cflambob.github.io/Twine-Project-Cole/p2510011.jpg" style=width:"50%">
+  </body>
 </html>
