--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
 <body>
-  [Welcome]
-  <br>
-  <img src="https://cflambob.github.io/Twine-Project-Cole/P5210011.jpg" style=width:"50%">
+  <tr>
+    <th>
+      Welcome
+      <br>
+      <img src="https://cflambob.github.io/Twine-Project-Cole/P5210011.jpg" style=width:"100%">
+    </th>
+  </tr>
 </body>
 </html>
