--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html>
 <body>
+  <style>
+    <body {
+      background-color: black;
+      color: white;
+      font-size: 48px;
+    }
+  </style>
   <tr>
     <th>
       Welcome
       <br>
-      <img src="https://cflambob.github.io/Twine-Project-Cole/P5210011.jpg" style=width:"100%">
+      <img src="pic_trulli.jpg" alt="Italian Trulli" style=width:"100%">
     </th>
   </tr>
 </body>
