--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
   <style>
     <body {
-      background-color: black;
+      background-color: blue;
       color: white;
       font-size: 48px;
     }
