--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <html>
-<body>
-  <style>
+<style>
     <body {
-      background-color: blue;
+      background-color: black;
       color: white;
       font-size: 48px;
     }
-  </style>
+</style>
+<body>
   <tr>
     <th>
       Welcome
       <br>
-      <iframe width="960" height="720" src="https://www.youtube.com/watch?v=NBDrqWtmyoI">
       </iframe>
-      <img src="pic_trulli.jpg" alt="Italian Trulli" style=width:"100%">
+      <<a href="https://cflambob.github.io/Twine-Project-Cole/Twine/Litter Cleaner.html">Litter Cleaner </a>
     </th>
   </tr>
 </body>
